--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Mr Echaffaudage</title>
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
     <div class="menu">
         <div class="mHead">
-            <a class="home" href="home.html">Mr Echaffaudage</a>
+            <a class="home" href="index.html">Mr Echaffaudage</a>
             <button class="close">
                 <img src="../static/images/menuClose.png" alt="menu close">
             </button>
@@ -36,7 +36,7 @@
 
     <section class="articleDetails">
         <div class="sHead">
-            <a href="home.html">Mr Echaffaudage</a>
+            <a href="index.html">Mr Echaffaudage</a>
             <figure id="close"><img src="../static/images/menuClose.png" alt=""></figure>
         </div>
         <div class="sBody">
@@ -90,7 +90,7 @@
         <figure class="menuOpen">
             <img src="../static/images/menuOpen.png" alt="menuOpen">
         </figure>
-        <a href="home.html" class="home">Mr Echaffaudage</a>
+        <a href="index.html" class="home">Mr Echaffaudage</a>
         <nav>
             <a href="./services.html">
                 <figure><img src="../static/images/services.png" alt="services"></figure>
@@ -283,6 +283,6 @@
         </article>
     </main>
 
-    <script src="../static/js/home.js" defer></script>
+    <script src="../static/js/index.js" defer></script>
 </body>
 </html>
