--- a/templates/notify.html
+++ b/templates/notify.html
@@ -8,7 +8,7 @@
 <body>
     <div class="menu">
         <div class="mHead">
-            <a class="home" href="index.html">Mr Echaffaudage</a>
+            <a class="home" href="../index.html">Mr Echaffaudage</a>
             <button class="close">
                 <img src="../static/images/menuClose.png" alt="menu close">
             </button>
@@ -38,7 +38,7 @@
         <figure class="menuOpen">
             <img src="../static/images/menuOpen.png" alt="menuOpen">
         </figure>
-        <a href="index.html" class="home">Mr Echaffaudage</a>
+        <a href="../index.html" class="home">Mr Echaffaudage</a>
         <nav>
             <a href="./services.html">
                 <figure><img src="../static/images/services.png" alt="services"></figure>
