--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="../static/css/contact.css">
+    <link rel="stylesheet" href="/static/css/contact.css">
 </head>
 <body>
     <div class="menu">
         <div class="mHead">
-            <a class="home" href="../index.html">Mr Echaffaudage</a>
+            <a class="home" href="/index.html">Mr Echaffaudage</a>
             <button class="close">
-                <img src="../static/images/menuClose.png" alt="menu close">
+                <img src="/static/images/menuClose.png" alt="menu close">
             </button>
         </div>
         <div class="mBody">
             <nav>
-                <a href="./services.html">
-                    <figure><img src="../static/images/services.png" alt="services"></figure>
+                <a href="/templates/services.html">
+                    <figure><img src="/static/images/services.png" alt="services"></figure>
                     <p>Services</p>
                 </a>
-                <a href="./contact.html">
-                    <figure><img src="../static/images/contact.png" alt="contact"></figure>
+                <a href="/templates/contact.html">
+                    <figure><img src="/static/images/contact.png" alt="contact"></figure>
                     <p>Contacts</p>
                 </a>
-                <a href="./notify.html">
-                    <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+                <a href="/templates/notify.html">
+                    <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                     <p>Notifications</p>
                 </a>
             </nav>
@@ -36,38 +36,38 @@
 
     <header>
         <figure class="menuOpen">
-            <img src="../static/images/menuOpen.png" alt="menuOpen">
+            <img src="/static/images/menuOpen.png" alt="menuOpen">
         </figure>
-        <a href="../index.html" class="home">Mr Echaffaudage</a>
+        <a href="/index.html" class="home">Mr Echaffaudage</a>
         <nav>
-            <a href="./services.html">
-                <figure><img src="../static/images/services.png" alt="services"></figure>
+            <a href="/templates/services.html">
+                <figure><img src="/static/images/services.png" alt="services"></figure>
                 <p>Services</p>
             </a>
-            <a href="./contact.html">
-                <figure><img src="../static/images/contact.png" alt="contact"></figure>
+            <a href="/templates/contact.html">
+                <figure><img src="/static/images/contact.png" alt="contact"></figure>
                 <p>Contacts</p>
             </a>
-            <a href="./notify.html">
-                <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+            <a href="/templates/notify.html">
+                <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                 <p>Notifications</p>
             </a>
         </nav>
         <figure class="sun">
-            <img src="../static/images/sun.png" alt="sun">
+            <img src="/static/images/sun.png" alt="sun">
         </figure>
     </header>
 
     <main>
         <a class="contact" href="./contact.html">
-            <figure><img src="../static/images/contact.png" alt="contact"></figure>
+            <figure><img src="/static/images/contact.png" alt="contact"></figure>
             <h1>Mes contacts</h1>
         </a>
 
         <section>
             <h2>Pour une assistance pro de proximite...</h2>
             <figure>
-                <img src="../static/images/im12.jpeg" alt="im12">
+                <img src="/static/images/im12.jpeg" alt="im12">
             </figure>
             <div class="ref">
                 <h3>Vous pouvez me contacer via:</h3>
@@ -75,7 +75,7 @@
                     <li>
                         <div class="head">
                             <h4>Mon telephone</h4>
-                            <figure><img src="../static/images/phone.png" alt="phone"></figure>
+                            <figure><img src="/static/images/phone.png" alt="phone"></figure>
                         </div>
                         <div class="list">
                             <p>+237 6 98 58 19 58</p>
@@ -84,7 +84,7 @@
                     <li>
                         <div class="head">
                             <h4>FaceBook</h4>
-                            <figure><img src="../static/images/facebook.png" alt="facebook"></figure>
+                            <figure><img src="/static/images/facebook.png" alt="facebook"></figure>
                         </div>
                         <div class="list">
                             <a href="#">lien du compte facebook</a>
@@ -93,7 +93,7 @@
                     <li>
                         <div class="head">
                             <h4>LinkdIn</h4>
-                            <figure><img src="../static/images/linkdin.png" alt="linkdin"></figure>
+                            <figure><img src="/static/images/linkdin.png" alt="linkdin"></figure>
                         </div>
                         <div class="list">
                             <a href="#">lien du compte linkDin</a>
@@ -102,7 +102,7 @@
                     <li>
                         <div class="head">
                             <h4>WhatsApp</h4>
-                            <figure><img src="../static/images/whatsapp.png" alt="whatsapp"></figure>
+                            <figure><img src="/static/images/whatsapp.png" alt="whatsapp"></figure>
                         </div>
                         <div class="list">
                             <a href="#">+237 6 98 58 19 58</a>
@@ -111,7 +111,7 @@
                     <li>
                         <div class="head">
                             <h4>Mon e-mail</h4>
-                            <figure><img src="../static/images/gmail.png" alt="gmail"></figure>
+                            <figure><img src="/static/images/gmail.png" alt="gmail"></figure>
                         </div>
                         <div class="list">
                             <a href="#">lien du compte Gmail</a>
@@ -121,6 +121,6 @@
             </div>
         </section>
     </main>
-    <script src="../static/js/index.js" defer></script>
+    <script src="/static/js/contact.js" defer></script>
 </body>
 </html>
