--- a/templates/notify.html
+++ b/templates/notify.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Notifications</title>
-    <link rel="stylesheet" href="../static/css/notify.css">
+    <link rel="stylesheet" href="/static/css/notify.css">
 </head>
 <body>
     <div class="menu">
         <div class="mHead">
-            <a class="home" href="../index.html">Mr Echaffaudage</a>
+            <a class="home" href="/index.html">Mr Echaffaudage</a>
             <button class="close">
-                <img src="../static/images/menuClose.png" alt="menu close">
+                <img src="/static/images/menuClose.png" alt="menu close">
             </button>
         </div>
         <div class="mBody">
             <nav>
                 <a href="./services.html">
-                    <figure><img src="../static/images/services.png" alt="services"></figure>
+                    <figure><img src="/static/images/services.png" alt="services"></figure>
                     <p>Services</p>
                 </a>
                 <a href="./contact.html">
-                    <figure><img src="../static/images/contact.png" alt="contact"></figure>
+                    <figure><img src="/static/images/contact.png" alt="contact"></figure>
                     <p>Contacts</p>
                 </a>
                 <a href="./notify.html">
-                    <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+                    <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                     <p>Notifications</p>
                 </a>
             </nav>
@@ -36,31 +36,31 @@
 
     <header>
         <figure class="menuOpen">
-            <img src="../static/images/menuOpen.png" alt="menuOpen">
+            <img src="/static/images/menuOpen.png" alt="menuOpen">
         </figure>
         <a href="../index.html" class="home">Mr Echaffaudage</a>
         <nav>
             <a href="./services.html">
-                <figure><img src="../static/images/services.png" alt="services"></figure>
+                <figure><img src="/static/images/services.png" alt="services"></figure>
                 <p>Services</p>
             </a>
             <a href="./contact.html">
-                <figure><img src="../static/images/contact.png" alt="contact"></figure>
+                <figure><img src="/static/images/contact.png" alt="contact"></figure>
                 <p>Contacts</p>
             </a>
             <a href="./notify.html">
-                <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+                <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                 <p>Notifications</p>
             </a>
         </nav>
         <figure class="sun">
-            <img src="../static/images/sun.png" alt="sun">
+            <img src="/static/images/sun.png" alt="sun">
         </figure>
     </header>
 
     <main>
         <a class="notify" href="./notify.html">
-            <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+            <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
             <h1>Notifications</h1>
         </a>
 
@@ -139,7 +139,6 @@
         </section>
     </main>
 
-    <script src="../static/js/index.js" defer></script>
-    <script src="../static/js/notify.js" defer></script>
+    <script src="/static/js/notify.js" defer></script>
 </body>
 </html>
