--- a/templates/services.html
+++ b/templates/services.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Mes Services</title>
-    <link rel="stylesheet" href="../static/css/services.css">
+    <link rel="stylesheet" href="/static/css/services.css">
 </head>
 <body>
     <div class="menu">
         <div class="mHead">
-            <a class="home" href="../index.html">Mr Echaffaudage</a>
+            <a class="home" href="/index.html">Mr Echaffaudage</a>
             <button class="close">
-                <img src="../static/images/menuClose.png" alt="menu close">
+                <img src="/static/images/menuClose.png" alt="menu close">
             </button>
         </div>
         <div class="mBody">
             <nav>
-                <a href="./services.html">
-                    <figure><img src="../static/images/services.png" alt="services"></figure>
+                <a href="/templates/services.html">
+                    <figure><img src="/static/images/services.png" alt="services"></figure>
                     <p>Services</p>
                 </a>
-                <a href="./contact.html">
-                    <figure><img src="../static/images/contact.png" alt="contact"></figure>
+                <a href="/templates/contact.html">
+                    <figure><img src="/static/images/contact.png" alt="contact"></figure>
                     <p>Contacts</p>
                 </a>
-                <a href="./notify.html">
-                    <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+                <a href="/templates/notify.html">
+                    <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                     <p>Notifications</p>
                 </a>
             </nav>
@@ -36,47 +36,48 @@
 
     <header>
         <figure class="menuOpen">
-            <img src="../static/images/menuOpen.png" alt="menuOpen">
+            <img src="/static/images/menuOpen.png" alt="menuOpen">
         </figure>
-        <a href="../index.html" class="home">Mr Echaffaudage</a>
+        <a href="/index.html" class="home">Mr Echaffaudage</a>
         <nav>
-            <a href="./services.html">
-                <figure><img src="../static/images/services.png" alt="services"></figure>
+            <a href="/templates/services.html">
+                <figure><img src="/static/images/services.png" alt="services"></figure>
                 <p>Services</p>
             </a>
-            <a href="./contact.html">
-                <figure><img src="../static/images/contact.png" alt="contact"></figure>
+            <a href="/templates/contact.html">
+                <figure><img src="/static/images/contact.png" alt="contact"></figure>
                 <p>Contacts</p>
             </a>
-            <a href="./notify.html">
-                <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+            <a href="/templates/notify.html">
+                <figure><img src="/static/images/notifications.png" alt="notifications"></figure>
                 <p>Notifications</p>
             </a>
         </nav>
         <figure class="sun">
-            <img src="../static/images/sun.png" alt="sun">
+            <img src="/static/images/sun.png" alt="sun">
         </figure>
     </header>
 
     <section class="servicesDetails">
         <div class="sHead">
-            <h2>Installation d'achaffaudage</h2>
-            <figure id="close"><img src="../static/images/menuClose.png" alt=""></figure>
+            <a href="/index.html">Mr Echaffaudage</a>
+            <figure id="close"><img src="/static/images/menuClose.png" alt=""></figure>
         </div>
         <div class="sBody">
             <div class="screen">
-                <figure class="mainImg"><img src="../static/images/im4.jpeg" alt="im4"></figure>
+                <figure class="mainImg"><img src="/static/images/im4.jpeg" alt="im4"></figure>
                 <ul>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="/static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="/static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="/static/images/im4.jpeg" alt="im4"></li>
                 </ul>
-                <a href="./contact.html" class="call">
-                    <figure><img src="../static/images/call.png" alt="smartphone"></figure>
+                <a href="templates/contact.html" class="call">
+                    <figure><img src="/static/images/call.png" alt="smartphone"></figure>
                     <p>Me contacter pour ce service</p>
                 </a>
             </div>
             <div class="det">
+                <h4>Pose d'un echaffaudage a Longpom</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, assumenda et eum excepturi exercitationem laborum mollitia non odio placeat sunt. Autem consectetur consequuntur officiis provident.
                 </p>
@@ -88,19 +89,19 @@
                 <ul>
                     <li>
                         <figure>
-                            <img src="../static/images/marks.png" alt="marks">
+                            <img src="/static/images/marks.png" alt="marks">
                         </figure>
                         <figcaption>a ete note +4.5/5</figcaption>
                     </li>
                     <li>
                         <figure>
-                            <img src="../static/images/satisfied.png" alt="satisfied">
+                            <img src="/static/images/satisfied.png" alt="satisfied">
                         </figure>
                         <figcaption>+15 clients satisfaits</figcaption>
                     </li>
                     <li>
                         <figure>
-                            <img src="../static/images/recommend.png" alt="recommend">
+                            <img src="/static/images/recommend.png" alt="recommend">
                         </figure>
                         <figcaption>+20 recommendations</figcaption>
                     </li>
@@ -111,14 +112,14 @@
 
     <main>
         <a class="services" href="./services.html">
-            <figure><img src="../static/images/services.png" alt="services"></figure>
+            <figure><img src="/static/images/services.png" alt="services"></figure>
             <h1>Nos services</h1>
         </a>
         <article>
             <ul>
                 <li>
                     <figure>
-                        <img src="../static/images/im4.jpeg" alt="im2">
+                        <img src="/static/images/im4.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Montage et demontage d'echaffaudage</h2>
@@ -134,7 +135,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im12.jpeg" alt="im12">
+                        <img src="/static/images/im12.jpeg" alt="im12">
                     </figure>
                     <div class="det">
                         <h2>Nettoyage de bateau et navire mixte</h2>
@@ -150,7 +151,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im11.jpeg" alt="im11">
+                        <img src="/static/images/im11.jpeg" alt="im11">
                     </figure>
                     <div class="det">
                         <h2>Contre expertise et devis estimatif</h2>
@@ -168,6 +169,6 @@
         </article>
     </main>
 
-    <script src="../static/js/service.js" defer></script>
+    <script src="/static/js/service.js" defer></script>
 </body>
 </html>
