--- a/static/css/notify.css
+++ b/static/css/notify.css
@@ -37,7 +37,7 @@ body{
             align-items: center;
             justify-content: space-between;
             width: 100%;
-            height: 8rem;
+            height: 6rem;
             border-bottom: 2px solid white;
             padding: 0 2rem;
             transition: all 0.5s;
@@ -46,8 +46,8 @@ body{
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 5rem;
-                height: 5rem;
+                width: 4rem;
+                height: 4rem;
                 background-color: transparent;
                 border: 1px solid white;
                 border-radius: 50%;
@@ -61,7 +61,7 @@ body{
 
             & .home{
                 color: white;
-                font-size: 5.5rem;
+                font-size: 2rem;
                 font-weight: bold;
                 text-decoration: none;
             }
@@ -151,7 +151,7 @@ body{
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        height: 8rem;
+        height: 5rem;
         background-color: var(--main-color);
         padding: 0 2rem;
         transition: all 0.5s;
@@ -161,8 +161,8 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 6rem;
-            height: 6rem;
+            width: 4rem;
+            height: 4rem;
 
             & img{
                 width: 100%;
@@ -174,8 +174,8 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 5rem;
-            height: 5rem;
+            width: 4rem;
+            height: 4rem;
 
             & img{
                 width: 100%;
@@ -189,7 +189,7 @@ body{
 
         & .home{
             color: white;
-            font-size: 5.5rem;
+            font-size: 2rem;
             font-weight: bold;
             text-decoration: none;
         }
@@ -243,6 +243,7 @@ body{
             align-items: center;
             gap: 2rem;
             width: 100%;
+            padding-bottom: 1rem;
 
             & .ref{
                 display: flex;
@@ -262,7 +263,7 @@ body{
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
-                    gap: 2rem;
+                    gap: 3rem;
                     width: 100%;
                     list-style: none;
                     padding: 0 2rem;
@@ -270,13 +271,15 @@ body{
                     & li{
                         display: flex;
                         flex-direction: column;
+                        align-items: center;
+                        justify-content: flex-start;
                         gap: 2rem;
                         width: 100%;
                         height: 20rem;
                         background-color: white;
                         border-radius: 1rem;
                         box-shadow: 0px 0px 10px 3px var(--main-color);
-                        padding: 1rem;
+                        padding: 2rem;
                         transition: all 0.5s ease-in-out;
                         overflow: hidden;
 
@@ -284,6 +287,7 @@ body{
                             display: flex;
                             align-items: flex-start;
                             justify-content: space-between;
+                            width: 100%;
 
                             & h4{
                                 color: var(--main-color);
@@ -354,6 +358,8 @@ body{
         }
     }
 }
+
+/*Responsive pour PC-----------------------*/
 
 @media (min-width: 1024px) {
     body{
