--- a/static/css/services.css
+++ b/static/css/services.css
@@ -37,7 +37,7 @@ body{
             align-items: center;
             justify-content: space-between;
             width: 100%;
-            height: 8rem;
+            height: 6rem;
             border-bottom: 2px solid white;
             padding: 0 2rem;
             transition: all 0.5s;
@@ -46,8 +46,8 @@ body{
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 5rem;
-                height: 5rem;
+                width: 4rem;
+                height: 4rem;
                 background-color: transparent;
                 border: 1px solid white;
                 border-radius: 50%;
@@ -61,7 +61,7 @@ body{
 
             & .home{
                 color: white;
-                font-size: 5.5rem;
+                font-size: 2rem;
                 font-weight: bold;
                 text-decoration: none;
             }
@@ -151,7 +151,7 @@ body{
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        height: 8rem;
+        height: 5rem;
         background-color: var(--main-color);
         padding: 0 2rem;
         transition: all 0.5s;
@@ -161,8 +161,8 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 6rem;
-            height: 6rem;
+            width: 4rem;
+            height: 4rem;
 
             & img{
                 width: 100%;
@@ -174,8 +174,8 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 5rem;
-            height: 5rem;
+            width: 4rem;
+            height: 4rem;
 
             & img{
                 width: 100%;
@@ -189,7 +189,7 @@ body{
 
         & .home{
             color: white;
-            font-size: 5.5rem;
+            font-size: 2rem;
             font-weight: bold;
             text-decoration: none;
         }
@@ -229,17 +229,19 @@ body{
             background-color: var(--main-color);
             z-index: 10;
 
-            & h2{
+            & a{
                 color: white;
-                font-size: 4rem;
+                font-size: 2rem;
+                font-weight: bold;
+                text-decoration: none;
             }
 
             & figure{
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 4.5rem;
-                height: 4.5rem;
+                width: 4rem;
+                height: 4rem;
                 border: solid 1px white;
                 border-radius: 50%;
                 padding: 0.1rem;
@@ -256,7 +258,7 @@ body{
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 1rem;
+            gap: 3rem;
             width: 100%;
 
             & .screen{
@@ -317,7 +319,8 @@ body{
                     background-color: var(--main-color);
                     border-radius: 1rem;
                     color: white;
-                    font-size: 3rem;
+                    font-size: 2rem;
+                    font-weight: bold;
                     padding: 1rem;
                     text-decoration: none;
                     transition: all 0.5s ease-in-out;
@@ -330,11 +333,17 @@ body{
 
             & .det{
                 display: flex;
+                flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                gap: 1rem;
                 min-height: 15rem;
-                font-size: 2.5rem;
+                font-size: 2rem;
                 padding: 0 2rem;
+
+                & h4{
+                    font-size: 3rem;
+                }
             }
         }
 
@@ -349,7 +358,7 @@ body{
             & h3{
                 align-self: flex-start;
                 color: var(--main-color);
-                font-size: 4rem;
+                font-size: 2rem;
             }
 
             & .skills{
@@ -379,8 +388,8 @@ body{
                             display: flex;
                             align-items: center;
                             justify-content: center;
-                            width: 15rem;
-                            height: 15rem;
+                            width: 12rem;
+                            height: 12rem;
                             background-color: var(--main-color);
                             border-radius: 50%;
                             padding: 2rem;
@@ -393,7 +402,7 @@ body{
 
                         & figcaption{
                             color: var(--main-color);
-                            font-size: xx-large;
+                            font-size: x-large;
                         }
                     }
                 }
@@ -450,7 +459,7 @@ body{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                gap: 2rem;
+                gap: 4rem;
                 width: 96%;
                 list-style: none;
 
@@ -462,7 +471,7 @@ body{
                     background-color: white;
                     border-radius: 1rem;
                     overflow: hidden;
-                    box-shadow: 0px 0px 10px 3px var(--main-color);
+                    box-shadow: 0px 0px 8px 2px #536dfe;
                     padding: 1rem 0;
 
                     & figure{
@@ -529,6 +538,8 @@ body{
         }
     }
 }
+
+/*Responsive for PC-----------------------------------*/
 
 @media (min-width: 1024px) {
     body{
