--- a/templates/services.html
+++ b/templates/services.html
@@ -71,7 +71,7 @@
                     <li><img src="/static/images/im4.jpeg" alt="im4"></li>
                     <li><img src="/static/images/im4.jpeg" alt="im4"></li>
                 </ul>
-                <a href="templates/contact.html" class="call">
+                <a href="/templates/contact.html" class="call">
                     <figure><img src="/static/images/call.png" alt="smartphone"></figure>
                     <p>Me contacter pour ce service</p>
                 </a>
@@ -95,7 +95,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="/static/images/satisfied.png" alt="satisfied">
+                            <img src="/static/images/services.png" alt="satisfied">
                         </figure>
                         <figcaption>+15 clients satisfaits</figcaption>
                     </li>
