--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -371,6 +371,7 @@ body{
     }
 }
 
+/*Responsive pour PC----------------------------------*/
 
 @media (min-width: 1024px) {
     body{
@@ -605,7 +606,7 @@ body{
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 4rem;
+            gap: 2rem;
             width: 100%;
             scroll-behavior: smooth;
             padding: 1rem 0;
@@ -655,8 +656,10 @@ body{
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    width: 100%;
-                    height: 65rem;
+                    width: 80%;
+                    height: 50rem;
+                    border-radius: 1rem;
+                    overflow: hidden;
 
                     & img{
                         width: 100%;
@@ -684,7 +687,7 @@ body{
                         flex-direction: column;
                         align-items: flex-start;
                         gap: 2rem;
-                        width: 100%;
+                        width: 80%;
                         list-style: none;
                         padding: 0 2rem;
 
@@ -695,7 +698,7 @@ body{
                             width: 100%;
                             background-color: white;
                             border-radius: 1rem;
-                            box-shadow: 0px 0px 10px 3px var(--main-color);
+                            box-shadow: 0px 0px 8px 2px var(--main-color);
                             padding: 1rem;
                             transition: all 0.5s ease-in-out;
 
