--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1083,8 +1083,9 @@ body{
                 & .screen{
                     display: flex;
                     align-items: center;
-                    width: 72%;
-                    height: 45rem;
+                    width: 80%;
+                    height: 50rem;
+                    border-radius: 2rem;
                     overflow: hidden;
 
                     & ul{
@@ -1229,8 +1230,9 @@ body{
                         flex-direction: column;
                         align-items: center;
                         gap: 1rem;
-                        width: 72%;
-                        box-shadow: 0px 0px 10px 3px var(--main-color);
+                        width: 80%;
+                        box-shadow: 0px 0px 8px 2px var(--main-color);
+                        border-radius: 1rem;
                         padding: 1rem 0;
 
                         & figure{
