--- a/static/css/notify.css
+++ b/static/css/notify.css
@@ -594,7 +594,7 @@ body{
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 4rem;
+            gap: 2rem;
             width: 100%;
             scroll-behavior: smooth;
             padding: 1rem 12rem;
@@ -657,14 +657,15 @@ body{
                         padding: 0 2rem;
 
                         & li{
+                            align-self: center;
                             display: flex;
                             flex-direction: column;
                             gap: 2rem;
-                            width: 100%;
+                            width: 80%;
                             height: 20rem;
                             background-color: white;
                             border-radius: 1rem;
-                            box-shadow: 0px 0px 10px 3px var(--main-color);
+                            box-shadow: 0px 0px 8px 2px var(--main-color);
                             padding: 1rem;
                             transition: all 0.5s ease-in-out;
                             overflow: hidden;
